# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  differ.py  formater_diff.py  generate_diff.py
gendiff/formaters/: format_diff.py  format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: __init__.py  differ.py  gendiff.py  generate_diff.py
tests/: test_gendiff.py  test_generate_diff.py
